[package]
name = "irly"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
mime_guess = "2.0.5"
prost = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = { version = "0.12.3", features = ["gzip"] }
tonic-reflection = "0.12.3"
warp = "0.3.7"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "hub"
path = "src/hub.rs"

[[bin]]
name = "client"
path = "src/client.rs"
